--- a/README.Rmd
+++ b/README.Rmd
@@ -15,10 +15,10 @@ search engine A `document` is the data returned from a search.
 
 The index plan is specified symbolically. An index plan has the form
 `data ~ terms` where `data` is the blob of data returned from a search
-and `terms` is the basis for a search in Xapian. A first order term
-index the text in the column as free text. A specification of the form
-`first:second` indicates that the text in `second` should be indexed
-with prefix `first`.
+and the `terms` are the basis for a search in Xapian. A first order
+term index the text in the column as free text. A specification of the
+form `first:second` indicates that the text in `second` should be
+indexed with prefix `first`.
 
 The prefix is a short string at the beginning of the term to indicate
 which field the term indexes. Valid prefixes are: 'A' ,'D', 'E', 'G',
@@ -38,6 +38,10 @@ data to the document.
 The specification `~X*.` creates prefix terms with all columns plus
 free text.
 
+If the response contains more than one column, e.g. `col_1 + col_2 ~
+X*.` the response is first converted to `JSON`. A compact form to
+convert all fields to `JSON` is to use `. ~ terms`.
+
 ### Example
 
 This is an `R` version of the `Python` example in the
@@ -51,7 +55,6 @@ by the Science Museum in London, UK.
 
 ```{r, index, message = FALSE, comment = "#>"}
 library(xapr)
-library(jsonlite)
 
 ## The first 100 rows of the museum catalogue data is distributed with
 ## the 'xapr' package
@@ -62,13 +65,11 @@ nmsi <- read.csv(filename, as.is = TRUE)
 path <- tempfile(pattern="xapr-")
 dir.create(path)
 
-## Store all the fields for display purposes
-nmsi$data <- sapply(seq_len(nrow(nmsi)), function(i) {toJSON(nmsi[i,])})
-
 ## Index the 'TITLE' and 'DESCRIPTION' fields with both a suitable
 ## prefix and without a prefix for general search. Use the 'id_NUMBER'
-## as unique identifier.
-xindex(data ~ S*TITLE + X*DESCRIPTION + Q:id_NUMBER, nmsi, path)
+## as unique identifier. Store all the fields as JSON for display
+## purposes.
+xindex(. ~ S*TITLE + X*DESCRIPTION + Q:id_NUMBER, nmsi, path)
 
 ## Run a search
 result <- xsearch("watch", path)
